--- a/src/templates/auth/signup.html
+++ b/src/templates/auth/signup.html
@@ -10,6 +10,14 @@
 
 <body>
 <div class="container">
+    {% with messages = get_flashed_messages(with_categories=true) %}
+    {% if messages %}
+      {% for category, message in messages %}
+        <div class="flash {{ category }}">{{ message }}</div>
+      {% endfor %}
+    {% endif %}
+  {% endwith %}
+
     <!-- Signup form container -->
     <h2>Créer un compte</h2>
     <form action="{{ url_for('signup') }}" method="POST">
